@@ -55,7 +55,7 @@ g5 <- new("dgCMatrix", Dim = c(5L, 5L),
           x = c(10, 1, 3, 10, 1, 10, 1, 10, 10),
           i = c(0L,2L,4L, 1L, 3L,2L,4L, 3L, 4L),
           p = c(0L, 3L, 5L, 7:9))
-t5 <- as(g5, "triangularMatrix") # works fine (but slowly) FIXME
+t5 <- as(g5, "triangularMatrix") # fine
 stopifnot(class(t5) == "dtCMatrix",
           identical(t5, tril(g5)))
 ## This is really a regression test for 'methods::selectMethod()'
